# BioTest

./: .coverage  .env.example  .gitignore  COVERAGE_NOTES.md  Crash_a4cd6dfd74dcb2ea0aa23c361486bab4e7789ea2.java  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkcoverage_artifacts.coverage  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatacoverage_report.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatadet_report.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatafeedback_state.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatamr_registry.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatarule_attempts.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkdatascc_report.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkcoverage_artifacts.coverage  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkdatadet_report.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkdatafeedback_state.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkdatamr_registry.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkdatarule_attempts.json  CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427seqan3_samworkdatascc_report.json  Flow.docx  Flow.md  PHASE4_EXECUTION_PLAN.md  README.md  biotest.py  biotest_config.yaml  biotest_config.yaml.backup_noodles  biotest_config.yaml.backup_vcfpy  default_11382582163576060044_0_1122241.profraw  default_11382582163576060044_0_1122242.profraw  default_11382582163576060044_0_1122317.profraw  default_11382582163576060044_0_1122318.profraw  default_11382582163576060044_0_1122387.profraw  default_11382582163576060044_0_1122388.profraw  default_11382582163576060044_0_1122456.profraw  default_11382582163576060044_0_1122457.profraw  default_11382582163576060044_0_1122525.profraw  default_11382582163576060044_0_1122526.profraw  default_11382582163576060044_0_1122595.profraw  default_11382582163576060044_0_1122596.profraw  default_11382582163576060044_0_1122665.profraw  default_11382582163576060044_0_1122666.profraw  (+2945 more)
.claude/: settings.local.json
CUsersmiaotGithubBioTestcomparesresultscoveragebiotest_4rep_cascade_20260427noodles_vcfworkcoverage_artifactsnoodles/: noodles-3083436-11382582163576060044_0.profraw  noodles-3083437-11382582163576060044_0.profraw  noodles-3083446-11382582163576060044_0.profraw  noodles-3083447-11382582163576060044_0.profraw  noodles-3083456-11382582163576060044_0.profraw  noodles-3083457-11382582163576060044_0.profraw  noodles-3083466-11382582163576060044_0.profraw  noodles-3083467-11382582163576060044_0.profraw  noodles-3083476-11382582163576060044_0.profraw  noodles-3083477-11382582163576060044_0.profraw  noodles-3083486-11382582163576060044_0.profraw  noodles-3083487-11382582163576060044_0.profraw  noodles-3083496-11382582163576060044_0.profraw  noodles-3083497-11382582163576060044_0.profraw  noodles-3083506-11382582163576060044_0.profraw  noodles-3083507-11382582163576060044_0.profraw  noodles-3083516-11382582163576060044_0.profraw  noodles-3083517-11382582163576060044_0.profraw  noodles-3083526-11382582163576060044_0.profraw  noodles-3083527-11382582163576060044_0.profraw  noodles-3083536-11382582163576060044_0.profraw  noodles-3083537-11382582163576060044_0.profraw  noodles-3083546-11382582163576060044_0.profraw  noodles-3083547-11382582163576060044_0.profraw  noodles-3083556-11382582163576060044_0.profraw  noodles-3083557-11382582163576060044_0.profraw  noodles-3083566-11382582163576060044_0.profraw  noodles-3083567-11382582163576060044_0.profraw  noodles-3083576-11382582163576060044_0.profraw  noodles-3083577-11382582163576060044_0.profraw  noodles-3083586-11382582163576060044_0.profraw  (+251 more)
compares/harnesses/cargo_fuzz/fuzz/: Cargo.toml
compares/harnesses/cargo_fuzz/fuzz/fuzz_targets/: noodles_vcf_target.rs
compares/harnesses/libfuzzer/: CMakeLists.txt  seqan3_sam_fuzzer.cpp
compares/harnesses/libfuzzer/build-aflpp/: CMakeCache.txt  Makefile  cmake_install.cmake  seqan3_sam_fuzzer_aflpp
compares/harnesses/libfuzzer/build_11564cb3b/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_4961904fb/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_4fe548913/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_5e5c05a47/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_745c645fe/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_8e374d7ce/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_9ec41b7fd/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_c84f56716/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_ca4d66839/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_df9fd5ff6/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_edbfa956f/: CMakeCache.txt  Makefile  cmake_install.cmake
compares/harnesses/libfuzzer/build_fa221c130/: CMakeCache.txt  Makefile  cmake_install.cmake
harnesses/rust/biotest_harness/: Cargo.toml
harnesses/rust/biotest_harness/src/: main.rs
harnesses/rust/noodles_harness/: Cargo.toml  README.md  default_5919648388949168417_0_119628.profraw  default_5919648388949168417_0_298.profraw
harnesses/rust/noodles_harness/src/: main.rs
(+51989 files in other folders)
