[package]
name = "biotest_harness"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "BioTest Rust harness template — query-method MR dispatch (Rank 5)."

[[bin]]
name = "biotest_harness"
path = "src/main.rs"

[dependencies]
# JSON output. Stable, no MSRV pain.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Add your SUT crate here once you onboard one:
# my_sut = { path = "../../../path/to/sut/crate" }
